--- a/src/app/hello.html
+++ b/src/app/hello.html
@@ -11,24 +11,24 @@
 
 <h1> {{ $ctrl.heroList }}</h1>
 
-<!--<table>-->
-    <!--<thead>-->
-    <!--<tr>-->
-        <!--<th>Name</th>-->
-        <!--<th>Telephone</th>-->
-        <!--<th>Email</th>-->
-        <!--<th>Actions</th>-->
-    <!--</tr>-->
-    <!--</thead>-->
-    <!--<tbody>-->
-    <!--<tr data-ng-repeat="item in $ctrl.list">-->
-        <!--<td data-ng-bind="item.name"></td>-->
-        <!--<td data-ng-bind="item.telephone"></td>-->
-        <!--<td data-ng-bind="item.email"></td>-->
-        <!--<td>-->
-            <!--<button type="button" data-ng-click="$ctrl.edit(item, $index)">Edit</button>-->
-            <!--<button type="button" data-ng-click="$ctrl.remove(item)">Delete</button>-->
-        <!--</td>-->
-    <!--</tr>-->
-    <!--</tbody>-->
-<!--</table>-->
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Telephone</th>
+        <th>Email</th>
+        <th>Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr data-ng-repeat="item in $ctrl.list">
+        <td data-ng-bind="item.name"></td>
+        <td data-ng-bind="item.telephone"></td>
+        <td data-ng-bind="item.email"></td>
+        <td>
+            <button type="button" data-ng-click="$ctrl.edit(item, $index)">Edit</button>
+            <button type="button" data-ng-click="$ctrl.remove(item)">Delete</button>
+        </td>
+    </tr>
+    </tbody>
+</table>
